// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "auto": Object {
    "background-size": "auto",
  },
  "bottom": Object {
    "background-position": "bottom",
  },
  "center": Object {
    "background-position": "center",
  },
  "contain": Object {
    "background-size": "contain",
  },
  "cover": Object {
    "background-size": "50%",
  },
  "fixed": Object {
    "background-attachment": "fixed",
  },
  "left": Object {
    "background-position": "left",
  },
  "left-bottom": Object {
    "background-position": "left bottom",
  },
  "left-top": Object {
    "background-position": "left top",
  },
  "local": Object {
    "background-attachment": "local",
  },
  "no-repeat": Object {
    "background-repeat": "no-repeat",
  },
  "repeat": Object {
    "background-repeat": "repeat",
  },
  "repeat-x": Object {
    "background-repeat": "repeat-x",
  },
  "repeat-y": Object {
    "background-repeat": "repeat-y",
  },
  "right": Object {
    "background-position": "right",
  },
  "right-bottom": Object {
    "background-position": "right bottom",
  },
  "right-top": Object {
    "background-position": "right top",
  },
  "scroll": Object {
    "background-attachment": "scroll",
  },
  "top": Object {
    "background-position": "top",
  },
}
`;

exports[`background when custom config is provided when the custom config provides a new value should add the value 1`] = `
Object {
  "75": Object {
    "background-size": "75%",
  },
  "auto": Object {
    "background-size": "auto",
  },
  "bottom": Object {
    "background-position": "bottom",
  },
  "center": Object {
    "background-position": "center",
  },
  "contain": Object {
    "background-size": "contain",
  },
  "cover": Object {
    "background-size": "cover",
  },
  "fixed": Object {
    "background-attachment": "fixed",
  },
  "left": Object {
    "background-position": "left",
  },
  "left-bottom": Object {
    "background-position": "left bottom",
  },
  "left-top": Object {
    "background-position": "left top",
  },
  "local": Object {
    "background-attachment": "local",
  },
  "no-repeat": Object {
    "background-repeat": "no-repeat",
  },
  "repeat": Object {
    "background-repeat": "repeat",
  },
  "repeat-x": Object {
    "background-repeat": "repeat-x",
  },
  "repeat-y": Object {
    "background-repeat": "repeat-y",
  },
  "right": Object {
    "background-position": "right",
  },
  "right-bottom": Object {
    "background-position": "right bottom",
  },
  "right-top": Object {
    "background-position": "right top",
  },
  "scroll": Object {
    "background-attachment": "scroll",
  },
  "top": Object {
    "background-position": "top",
  },
}
`;

exports[`background when no custom config is provided should return the default config 1`] = `
Object {
  "auto": Object {
    "background-size": "auto",
  },
  "black": Object {
    "background-color": "black",
  },
  "blue": Object {
    "background-color": "blue",
  },
  "bottom": Object {
    "background-position": "bottom",
  },
  "center": Object {
    "background-position": "center",
  },
  "contain": Object {
    "background-size": "contain",
  },
  "cover": Object {
    "background-size": "cover",
  },
  "fixed": Object {
    "background-attachment": "fixed",
  },
  "gray": Object {
    "background-color": "gray",
  },
  "green": Object {
    "background-color": "green",
  },
  "left": Object {
    "background-position": "left",
  },
  "left-bottom": Object {
    "background-position": "left bottom",
  },
  "left-top": Object {
    "background-position": "left top",
  },
  "local": Object {
    "background-attachment": "local",
  },
  "no-repeat": Object {
    "background-repeat": "no-repeat",
  },
  "orange": Object {
    "background-color": "orange",
  },
  "purple": Object {
    "background-color": "purple",
  },
  "red": Object {
    "background-color": "red",
  },
  "repeat": Object {
    "background-repeat": "repeat",
  },
  "repeat-x": Object {
    "background-repeat": "repeat-x",
  },
  "repeat-y": Object {
    "background-repeat": "repeat-y",
  },
  "right": Object {
    "background-position": "right",
  },
  "right-bottom": Object {
    "background-position": "right bottom",
  },
  "right-top": Object {
    "background-position": "right top",
  },
  "scroll": Object {
    "background-attachment": "scroll",
  },
  "top": Object {
    "background-position": "top",
  },
  "white": Object {
    "background-color": "white",
  },
  "yellow": Object {
    "background-color": "yellow",
  },
}
`;
